Adds Boost to Travis CI
This is actually required because of Boost.Test.

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ addons:
     packages:
       - build-essential
       - cmake
+      - libboost-all-dev
 
 script:
   # Skip formatting check because clang-format in Travis is too old.
